Updated index.html with X icon
Replace Twitter icon with X icon.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 </head>
 <body>
     <section id="nav-bar">
-
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
-
               <a class="navbar-brand" href="#"><img src="./images/demo-logo.png"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" 
               aria-expanded="false" aria-label="Toggle navigation">
@@ -143,12 +141,12 @@
     <div class="container text-center">
         <p>FIND US ON SOCIAL MEDIA</p>
         <div class="social-icons">
-            <a href="#"><img src="./images/facebook-icon.png"></a>
-            <a href="#"><img src="./images/instagram-icon.png"></a>
-            <a href="#"><img src="./images/twitter-icon.png"></a>
-            <a href="#"><img src="./images/whatsapp-icon.png"></a>
-            <a href="#"><img src="./images/linkedin-icon.png"></a>
-            <a href="#"><img src="./images/snapchat-icon.png"></a>
+            <a href="#footer"><img src="./images/facebook-icon.png"></a>
+            <a href="#footer"><img src="./images/instagram-icon.png"></a>
+            <a href="#footer"><img src="./images/X-icon.png"></a>
+            <a href="#footer"><img src="./images/whatsapp-icon.png"></a>
+            <a href="#footer"><img src="./images/linkedin-icon.png"></a>
+            <a href="#footer"><img src="./images/snapchat-icon.png"></a>
         </div>
     </div>
 </section>
